<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="system_category">System</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="statusbar_category">Status Bar</string>
    <string name="navigation_category">Navigation</string>
    <string name="multitasking_category">Multi-Tasking</string>
    <string name="animations_category">Animations</string>
    <string name="battery_category">Battery</string>
    <string name="expanded_desktop_category">Expanded desktop</string>
    <string name="misctweaks_category">Misc. tweaks</string>
    <string name="powermenu_category">Power menu</string>
    <string name="quicksettings_category">Quick settings</string>
    <string name="recents_category">Recents</string>
    <string name="statusbar_items_category">Statusbar items</string>
    <string name="statusbar_notifications_category">Notifications</string>
    <string name="lockscreen_notifications_category">Lockscreen Notifications</string>
    <string name="wakelockblocker_category">Wakelock blocker</string>
    <string name="gestures_category">Gestures</string>
    <string name="doubletap_gestures_category">Double tap gestures</string>
    <string name="multiwindow_category">Multi-window</string>
    <string name="listview_animations_category">List View Animations</string>
    <string name="system_animations_category">System Animations</string>
    <string name="omniswitch_category">OmniSwitch</string>
    <string name="weather_category">Weather widget</string>
    <string name="breathing_notifications_category">Breathing Notifications</string>
    <string name="button_settings">Buttons</string>
    <string name="category_heads_up">Heads up</string>
    <string name="lockscreen_colors_fonts_category_title">Colors &amp; fonts</string>
    <string name="aosp_recents_title">AOSP recents</string>
    <string name="omniswitch_recents_title">OmniSwitch recents</string>
    <string name="recents_use_omniswitch_title">Enable omni recents</string>
    <string name="recents_use_omniswitch_summary">Use OmniSwitch for recents view</string>
    <string name="omniswitch_start_settings_summary">Open OmniSwitch settings</string>
    <string name="omniswitch_first_time_title">Information</string>
    <string name="omniswitch_first_time_message">Make sure you have enabled OmniSwitch. You can do this by using \"Settings\" below</string>
    <string name="dirtytweaks_dialog_title">Help Us, Help You!!</string>
    <string name="dirtytweaks_dialog_message">Unfortunately we are not wizards!\n\nSo if you find a bug with any of these settings, please open up a ticket on Jira or contact a DU developer with the following.\n\n1. Logcat or Last_Kmsg\n2. Kernel and Mods used\n3. Useful information\n\nIf you fail to report something, do not expect things to be fixed. Remember, we are not wizards so we do miss things.</string>
    <string name="dirtytweaks_dialog_toast">READ THE WHOLE THING!</string>
    <string name="toast_icon_title">Toast icon</string>
    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
    <string name="title_quick_pulldown">Quick pulldown</string>
    <string name="summary_quick_pulldown">%1$s edge of the status bar pulls down Quick Settings</string>
    <string name="quick_pulldown_off">Off</string>
    <string name="quick_pulldown_left">Left</string>
    <string name="quick_pulldown_right">Right</string>
    <string name="smart_pulldown_title">Smart pulldown</string>
    <string name="smart_pulldown_summary">Open Quick Settings when there are %1$s notifications present</string>
    <string name="smart_pulldown_off">Off</string>
    <string name="smart_pulldown_dismissable">No dismissable</string>
    <string name="smart_pulldown_persistent">No persistent</string>
    <string name="smart_pulldown_all">No dismissable or persistent</string>
    <string name="qs_brightness_slider_title">Brightness slider</string>
    <string name="qs_brightness_slider_summary">Show a brightness slider in the quick settings panel</string>
    <string name="brightness_icon_title">Brightness icon </string>
    <string name="brightness_icon_summary">Show a brightness icon to the left of the brighness slider to adjust auto-brightness</string>
    <string name="qs_num_columns_three">Three</string>
    <string name="qs_num_columns_four">Four</string>
    <string name="qs_num_columns_five">Five</string>
    <string name="immersive_recents_title">Immersive Recents</string>
    <string name="immersive_recents_summary">Change the view of the recents screen</string>
    <string name="immersive_recents_dialog_title">Select recents view</string>
    <string name="immersive_recents_default">Default</string>
    <string name="immersive_recents_fullscreen">Fullscreen</string>
    <string name="immersive_recents_statusbar">Statusbar only</string>
    <string name="immersive_recents_navbar">Navbar only</string>
    <string name="powermenu_lockscreen_title">Power menu on lock screen</string>
    <string name="powermenu_lockscreen_summary">Show power menu on the lock screen</string>
    <string name="powermenu_power">Power</string>
    <string name="powermenu_reboot">Reboot</string>
    <string name="powermenu_screenshot">Screenshot</string>
    <string name="powermenu_screenrecord">Screen Record</string>
    <string name="powermenu_torch">Torch</string>
    <string name="powermenu_airplane">Airplane</string>
    <string name="powermenu_settings">Settings</string>
    <string name="powermenu_lockdown">Lock Down</string>
    <string name="powermenu_soundpanel">Sound Panel</string>
    <string name="powermenu_options">Additional options</string>
    <string name="powermenu_dialog_dim">Dialog dim background amount</string>
    <string name="advanced_reboot_title">Advanced reboot</string>
    <string name="force_expanded_notifications_title">Force Expanded Notifications</string>
    <string name="force_expanded_notifications_summary">Available only for apps that support expanded notifications</string>
    <string name="disable_immersive_message_title">Disable Immersive Mode Messages</string>
    <string name="disable_immersive_message_summary">This will hide all Immersive Mode Messages</string>
    <string name="disable_fc_notifications_title">Disable FC Notifications</string>
    <string name="disable_fc_notifications_summary">This will hide all force close notifications</string>
    <string name="double_tap_to_sleep_title">DT2S on Statusbar</string>
    <string name="double_tap_to_sleep_summary">Double tap status bar to put the device to sleep</string>
    <string name="double_tap_sleep_nav_bar_title">DT2S on Navbar</string>
    <string name="double_tap_sleep_nav_bar_summary">Double tap navigation bar to put the device to sleep</string>
    <string name="double_tap_to_sleep_lockscreen_title">DT2S on Lockscreen</string>
    <string name="double_tap_to_sleep_lockscreen_summary">Double tap on the top third or bottom shortcut area of the lock screen to put the device to sleep</string>
    <string name="keyguard_torch_title">Lockscreen torch</string>
    <string name="keyguard_torch_summary">Longpress power button while screen is off to turn on flashlight</string>
    <string name="status_bar_clock">Clock &amp; date</string>
    <string name="traffic_category">Traffic indicators</string>
    <string name="carrier_options">Carrier label</string>
    <string name="recents_show_searchbar">Recents panel Search bar</string>
    <string name="recents_searchbar_summary_enabled">Search bar in recents menu is enabled</string>
    <string name="recents_searchbar_summary_disabled">Search bar in recents menu is disabled</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display the number of pending notifications</string>
    <string name="status_bar_brightness_control_title">Brightness control</string>
    <string name="status_bar_brightness_control_summary">Adjust brightness by sliding across status bar</string>
    <string name="show_clear_all_recents_button_title">Clear all button</string>
    <string name="show_clear_all_recents_button_summary">Show clear all button</string>
    <string name="recents_clear_all_location_title">Clear all location</string>
    <string name="pref_scrollingcache_title">Scrolling cache</string>
    <string name="pref_scrollingcache_summary">Scrolling cache may improve scrolling performance at the cost of memory</string>
    <string name="missed_call_breath_title">Breathing Missed Call</string>
    <string name="missed_call_breath_summary">Will give your missed call notifications a breathing effect in the statusbar</string>
    <string name="voicemail_breath_title">Breathing Voicemail</string>
    <string name="voicemail_breath_summary">Will give your voicemail notifications a breathing effect in the statusbar</string>
    <string name="sms_breath_title">Breathing SMS</string>
    <string name="sms_breath_summary">Will give your SMS notifications a breathing effect in the statusbar</string>
    <string name="lockscreen_config_title">Lockscreen configs</string>
    <string name="lockscreen_wallpaper_set_title">Set new wallpaper</string>
    <string name="lockscreen_wallpaper_clear_title">Return to default</string>
    <string name="enable_task_manager_title">Task Manager</string>
    <string name="enable_task_manager_summary">Enable/Disable action for the task manager button in the expanded statusbar area</string>
    <string name="power_menu_animation_summary">Change the enter/exit animation of the power menu</string>
    <string name="media_art_title">Media cover art</string>
    <string name="media_art_summary">Enable media cover art on the lockscreen</string>
    <string name="lockscreen_maxnotif_title">Lockscreen notification count</string>
    <string name="lockscreen_maxnotif_sumary">Enable adjustment of max lockscreen notifications</string>
    <string name="lockscreen_maxnotif_config">Max lockscreen notifications</string>
    <string name="selinux_switch_title">Selinux Switch options</string>
    <string name="selinux_switch_summary">SELinux is a set of kernel modifications and user-space tools. Changing modes can cause unwanted effects. Use at your own risk.</string>
    <string name="selinux_title">Selinux Mode</string>
    <string name="ls_bouncer_title">Secure lockscreen bouncer</string>
    <string name="lockscreen_alpha">Lockscreen alpha</string>
    <string name="lockscreen_security_alpha">Lockscreen bouncer alpha</string>
    <string name="slim_recents_enable_title">Enable slim recents</string>
    <string name="slim_recents_enable_summary">Use Slim Recents for recents view</string>
    <string name="slim_recents_title">Slim Recents</string>
    <string name="show_running_tasks_title">Only show running apps</string>
    <string name="recents_max_apps_title">Max allowed apps</string>
    <string name="recent_panel_scale_title">Size</string>
    <string name="recent_panel_expanded_mode_title">Expanded mode</string>
    <string name="recent_panel_expanded_mode_summary">Recent tasks expanded preview mode</string>
    <string name="recent_panel_show_topmost_title">Show topmost task</string>
    <string name="recent_panel_show_topmost_summary">Don\'t exclude the topmost task in recents view</string>
    <string name="recent_panel_bg_color_title">Panel background color</string>
    <string name="recent_card_bg_color_title">Card background color</string>
    <string name="recent_card_text_color_title">Card text color</string>
    <string name="recent_panel_lefty_mode_title">Show on the left edge</string>
    <string name="recent_panel_lefty_mode_summary">Show recent apps panel on the left edge</string>
    <string name="lock_screen_show_current">Charging current</string>
    <string name="lock_screen_show_current_summary">Show charging current rate on lock screen</string>
</resources>