<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/misctweaks_category" >

        <SwitchPreference
            android:key="status_bar_brightness_control"
            android:summary="@string/status_bar_brightness_control_summary"
            android:title="@string/status_bar_brightness_control_title" />

        <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="status_bar_du_logo"
            android:title="@string/status_bar_du_logo_title"
            android:summary="@string/status_bar_du_logo_summary"
            android:defaultValue="false" />

        <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="toast_icon"
            android:title="@string/toast_icon_title"
            android:summary="@string/toast_icon_summary"
            android:defaultValue="false" />

        <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="disable_fc_notifications"
            android:title="@string/disable_fc_notifications_title"
            android:summary="@string/disable_fc_notifications_summary"
            android:defaultValue="false" />

        <PreferenceCategory
            android:key="gestures_category"
            android:title="@string/gestures_category" />

        <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="double_tap_sleep_gesture"
            android:title="@string/double_tap_to_sleep_title"
            android:summary="@string/double_tap_to_sleep_summary"
            android:defaultValue="false" />

        <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="double_tap_sleep_navbar"
            android:title="@string/double_tap_sleep_nav_bar_title"
            android:summary="@string/double_tap_sleep_nav_bar_summary"
            android:defaultValue="false" />

        <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="double_tap_sleep_lock_screen"
            android:title="@string/double_tap_to_sleep_lockscreen_title"
            android:summary="@string/double_tap_to_sleep_lockscreen_summary"
            android:defaultValue="false" />

</PreferenceScreen>
