<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2015-2016 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/statusbar_notifications_category" >

     <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
        android:key="status_bar_notif_count"
        android:title="@string/status_bar_notif_count_title"
        android:summary="@string/status_bar_notif_count_summary"
        android:persistent="false" />

    <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
        android:key="force_expanded_notifications"
        android:title="@string/force_expanded_notifications_title"
        android:summary="@string/force_expanded_notifications_summary" />

    <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
        android:key="disable_immersive_message"
        android:title="@string/disable_immersive_message_title"
        android:summary="@string/disable_immersive_message_summary"
        android:persistent="false" />

    <PreferenceScreen
       android:key="systemui_tuner_pnc"
       android:title="@string/power_notification_controls_title"
       android:summary="@string/power_notification_controls_summary" >
       <intent
           android:action="android.intent.action.MAIN"
           android:targetPackage="com.android.systemui"
           android:targetClass="com.android.systemui.tuner.PNCActivity" />
    </PreferenceScreen>

    <PreferenceCategory
        android:key="breathing_notifications"
        android:title="@string/breathing_notifications_category">

    <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
        android:key="missed_call_breath"
        android:title="@string/missed_call_breath_title"
        android:summary="@string/missed_call_breath_summary"
        android:persistent="false"/>

    <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
        android:key="voicemail_breath"
        android:title="@string/voicemail_breath_title"
        android:summary="@string/voicemail_breath_summary"
        android:persistent="false"/>

    <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
        android:key="sms_breath"
        android:title="@string/sms_breath_title"
        android:summary="@string/sms_breath_summary"
        android:persistent="false"/>

    </PreferenceCategory>

</PreferenceScreen>
