<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 The Dirty Unicorns Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/misctweaks_category" >

         <ListPreference 
            android:key="pref_scrollingcache"
            android:dialogTitle="@string/pref_scrollingcache_title"
            android:title="@string/pref_scrollingcache_title"
            android:summary="@string/pref_scrollingcache_summary"
            android:entries="@array/entries_scrollingcache"
            android:entryValues="@array/values_scrollingcache" />

         <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="disable_torch_on_screen_off"
            android:title="@string/disable_torch_screen_off_title"
            android:defaultValue="false" />

         <ListPreference
            android:key="disable_torch_on_screen_off_delay"
            android:title="@string/disable_torch_screen_off_delay_title"
            android:dialogTitle="@string/disable_torch_screen_off_delay_title"
            android:entries="@array/torch_screen_off_delay_entries"
            android:entryValues="@array/torch_screen_off_delay_values"
            android:dependency="disable_torch_on_screen_off" />

         <Preference
            android:key="selinux_switch"
            android:title="@string/selinux_switch_title"
            android:summary="@string/selinux_switch_summary"
            android:selectable="false"/>

         <SwitchPreference
            android:key="selinux"
            android:title="@string/selinux_title"
            android:defaultValue="false" />

         <PreferenceCategory
           android:key="misctweaks_statusbarbar_category"
           android:title="@string/misctweaks_statusbarbar_category" />

         <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="status_bar_show_show_ticker"
            android:title="@string/status_bar_ticker_title"
            android:summary="@string/status_bar_ticker_summary"
            android:defaultValue="false" />

         <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="show_fourg"
            android:title="@string/show_fourg_title"
            android:summary="@string/show_fourg_summary"
            android:defaultValue="false" />

         <SwitchPreference
            android:key="status_bar_brightness_control"
            android:summary="@string/status_bar_brightness_control_summary"
            android:title="@string/status_bar_brightness_control_title" />

         <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="disable_fc_notifications"
            android:title="@string/disable_fc_notifications_title"
            android:summary="@string/disable_fc_notifications_summary" />

         <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="force_expanded_notifications"
            android:title="@string/force_expanded_notifications_title"
            android:summary="@string/force_expanded_notifications_summary" />

         <SwitchPreference
            android:key="disable_immersive_message"
            android:title="@string/disable_immersive_message_title"
            android:summary="@string/disable_immersive_message_summary"
            android:persistent="false" />

         <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="enable_task_manager"
            android:title="@string/enable_task_manager_title"
            android:summary="@string/enable_task_manager_summary" />

         <PreferenceCategory
           android:key="misctweaks_gestures_category"
           android:title="@string/misctweaks_gestures_category" />

         <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="double_tap_sleep_gesture"
            android:title="@string/double_tap_to_sleep_title"
            android:summary="@string/double_tap_to_sleep_summary"
            android:defaultValue="true" />

         <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="double_tap_sleep_navbar"
            android:title="@string/double_tap_sleep_nav_bar_title"
            android:summary="@string/double_tap_sleep_nav_bar_summary"
            android:defaultValue="false" />

</PreferenceScreen>

