<?xml version="1.0" encoding="utf-8"?>
<!--  Copyright (C) 2015 The OmniROM Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

        <Preference
            android:key="lockscreen_wallpaper_set"
            android:title="@string/lockscreen_wallpaper_set_title"
            android:persistent="false"/>

        <Preference
            android:key="lockscreen_wallpaper_clear"
            android:title="@string/lockscreen_wallpaper_clear_title"
            android:persistent="false"/>

        <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="lockscreen_media_metadata"
            android:title="@string/media_art_title"
            android:summary="@string/media_art_summary"
            android:defaultValue="true" />

        <PreferenceCategory
            android:key="lockscreen_notifications_category"
            android:title="@string/lockscreen_notifications_category" />
 
        <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="lock_screen_custom_notif"
            android:title="@string/lockscreen_maxnotif_title"
            android:summary="@string/lockscreen_maxnotif_sumary"
            android:defaultValue="false" />

        <com.dirtyunicorns.dutweaks.widget.SeekBarPreferenceCham
            android:key="lockscreen_max_notif_cofig"
            android:title="@string/lockscreen_maxnotif_config"
            android:max="5"
            settings:minimum="3"
            settings:interval="1"
            settings:unitsLeft=""
            settings:unitsRight=""
            android:persistent="false"
            android:dependency="lock_screen_custom_notif" />

        <PreferenceCategory
            android:key="lockscreen_config_category"
            android:title="@string/lockscreen_config_title" />

        <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
             android:key="keyguard_toggle_torch"
             android:title="@string/keyguard_torch_title"
             android:summary="@string/keyguard_torch_summary"
             android:defaultValue="false" />

        <ListPreference
            android:key="lockscreen_bouncer"
            android:title="@string/ls_bouncer_title"
            android:entries="@array/ls_bouncer_entries"
            android:entryValues="@array/ls_bouncer_values"
            android:persistent="false" />

        <com.dirtyunicorns.dutweaks.widget.SeekBarPreferenceCham
            android:key="lockscreen_alpha"
            android:title="@string/lockscreen_alpha"
            android:max="100"
            settings:minimum="0"
            settings:interval="1"
            settings:unitsLeft=""
            settings:unitsRight="%"
            android:persistent="false" />

        <com.dirtyunicorns.dutweaks.widget.SeekBarPreferenceCham
            android:key="lockscreen_security_alpha"
            android:title="@string/lockscreen_security_alpha"
            android:max="100"
            settings:minimum="0"
            settings:interval="1"
            settings:unitsLeft=""
            settings:unitsRight="%"
            android:persistent="false" />

        <com.dirtyunicorns.dutweaks.preference.SystemSettingSwitchPreference
            android:key="lock_screen_show_current"
            android:title="@string/lock_screen_show_current"
            android:summary="@string/lock_screen_show_current_summary"
            android:defaultValue="false" />

</PreferenceScreen>

